--- a/K53_Sign_Test/road_sign_test8.html
+++ b/K53_Sign_Test/road_sign_test8.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -106,7 +106,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -188,7 +188,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +270,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +352,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -401,7 +401,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -475,7 +475,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -557,7 +557,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -639,7 +639,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -721,7 +721,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -803,7 +803,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -854,7 +854,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -922,7 +922,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1004,7 +1004,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1086,7 +1086,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1168,7 +1168,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1250,7 +1250,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1299,7 +1299,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1397,7 +1397,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
     <div class="container">
       <div id="branding2">
         <h1><a ><span id="time"></span></a></h1>
@@ -1489,7 +1489,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1571,7 +1571,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1653,7 +1653,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1735,7 +1735,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1787,7 +1787,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1855,7 +1855,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1937,7 +1937,7 @@
     <h3>Question 22 of   30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2019,7 +2019,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2101,7 +2101,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2183,7 +2183,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2233,7 +2233,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2303,7 +2303,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2385,7 +2385,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2467,7 +2467,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2549,7 +2549,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2600,7 +2600,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2667,7 +2667,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3253,6 +3253,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
