--- a/K53_Sign_Test/road_sign_test9.html
+++ b/K53_Sign_Test/road_sign_test9.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -106,7 +106,7 @@
     <h3>Question 2 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -188,7 +188,7 @@
     <h3>Question 3 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -270,7 +270,7 @@
     <h3>Question 4 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -352,7 +352,7 @@
     <h3>Question 5 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -401,7 +401,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -475,7 +475,7 @@
     <h3>Question 6 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -557,7 +557,7 @@
     <h3>Question 7 of   30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -639,7 +639,7 @@
     <h3>Question 8 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -721,7 +721,7 @@
     <h3>Question 9 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -803,7 +803,7 @@
     <h3>Question 10 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -853,7 +853,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -920,7 +920,7 @@
     <h3>Question 11 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1002,7 +1002,7 @@
     <h3>Question 12 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1084,7 +1084,7 @@
     <h3>Question 13 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1166,7 +1166,7 @@
     <h3>Question 14 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1248,7 +1248,7 @@
     <h3>Question 15 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1297,7 +1297,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1394,7 +1394,7 @@
     <h3>Question 16 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
     <div class="container">
       <div id="branding2">
         <h1><a ><span id="time"></span></a></h1>
@@ -1486,7 +1486,7 @@
     <h3>Question 17 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1568,7 +1568,7 @@
     <h3>Question 18 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1650,7 +1650,7 @@
     <h3>Question 19 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1732,7 +1732,7 @@
     <h3>Question 20 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1783,7 +1783,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1851,7 +1851,7 @@
     <h3>Question 21 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -1933,7 +1933,7 @@
     <h3>Question 22 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2015,7 +2015,7 @@
     <h3>Question 23 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2097,7 +2097,7 @@
     <h3>Question 24 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2179,7 +2179,7 @@
     <h3>Question 25 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2229,7 +2229,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2303,7 +2303,7 @@
     <h3>Question 26 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2385,7 +2385,7 @@
     <h3>Question 27 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2467,7 +2467,7 @@
     <h3>Question 28 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2549,7 +2549,7 @@
     <h3>Question 29 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2600,7 +2600,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -2668,7 +2668,7 @@
     <h3>Question 30 of 30</h3>
   </div>
   <div class="time_score">
-    <p> 🚦Get the exact <span id="month">January</span> pdf Memo R100 </p>
+    <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo"     target="_blank"     style="color: blue; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: black">R100</span> </a>
 
     <div class="container">
       <div id="branding">
@@ -3250,6 +3250,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
