--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <p>Learner's License Test </p>
             <p>Multiple Choice Questions</p>
             <a href="./home_images/home.html" class="btn">Free K53 Learners License  🚦🛣️</a> <br> <br>
-			<a href="./K53_Sign_Test/download.html" class="btn">Download MEMO 🚦🛣️</a><br> <br>
+			<a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R100%20Learners'%20Memo" 
+   target="_blank" 
+ class="btn">🚦⚠️Get the exact <span id="month">January</span> pdf Memo <span style="color: gold">R100</span></a><br> <br>
 			<a href="./bursaries" class="btn">Bursaries 🎓</a><br> <br>
 			<a href="./universities" class="btn">Open TVETs and Universities 👩‍🎓</a><br> <br>
 			<a href="./jobs" class="btn">Jobs 👷‍♂️</a>
@@ -118,6 +120,7 @@
 
   installClose.addEventListener('click', hideMyInstallPromotion);
 </script>
+
 
 
 
