--- a/K53_Sign_Test/control_signs.html
+++ b/K53_Sign_Test/control_signs.html
@@ -587,4 +587,6 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+			var control_signs = 1; 
+		localStorage.setItem("control_signs", control_signs);
  </script>
