--- a/K53_Sign_Test/regulatory_signs.html
+++ b/K53_Sign_Test/regulatory_signs.html
@@ -209,8 +209,9 @@
 	
 	if (control_signs > 0)
 	{
-		control_signs = 100;
+		document.getElementById("1").style.width = "100px";
 	}
-    document.getElementById("1").style.width = control_signs + "px";
+    
 
  </script>
+
