--- a/K53_Sign_Test/prohibition_signs.html
+++ b/K53_Sign_Test/prohibition_signs.html
@@ -1197,6 +1197,8 @@
 </body>
 </html>
  <script type="text/javascript">
+	 			var prohibition_signs = 1; 
+		localStorage.setItem("prohibition_signs", prohibition_signs);
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
  	navbar.style.top = "-80px";
@@ -1211,3 +1213,4 @@
  		lastScrollTop = scrollTop;
  	})
  </script>
+
