--- a/K53_Sign_Test/comprehensive_signs.html
+++ b/K53_Sign_Test/comprehensive_signs.html
@@ -263,6 +263,8 @@
 
 
  <script type="text/javascript">
+	 			var comprehensive_signs = 1; 
+		localStorage.setItem("comprehensive_signs", comprehensive_signs);
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
  	navbar.style.top = "-80px";
@@ -276,4 +278,5 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+
  </script>
