--- a/K53_Sign_Test/secondary_signs.html
+++ b/K53_Sign_Test/secondary_signs.html
@@ -1272,6 +1272,8 @@
 
 
  <script type="text/javascript">
+	 	 			var secondary_signs = 1; 
+		localStorage.setItem("secondary_signs", secondary_signs);
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
  	navbar.style.top = "-80px";
@@ -1285,4 +1287,5 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+
  </script>
