--- a/K53_Sign_Test/de-restriction_signs.html
+++ b/K53_Sign_Test/de-restriction_signs.html
@@ -408,6 +408,8 @@
 
 
  <script type="text/javascript">
+	 	 	 			var derestriction_signs = 1; 
+		localStorage.setItem("derestriction_signs", derestriction_signs);
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
  	navbar.style.top = "-80px";
@@ -421,4 +423,5 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+
  </script>
