--- a/K53_Sign_Test/signals.html
+++ b/K53_Sign_Test/signals.html
@@ -1327,6 +1327,8 @@
 
 
  <script type="text/javascript">
+	 	 	 	 			var signals = 1; 
+		localStorage.setItem("signals", signals);
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
  	navbar.style.top = "-80px";
@@ -1340,4 +1342,5 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+
  </script>
