--- a/K53_Sign_Test/regulatory_signs.html
+++ b/K53_Sign_Test/regulatory_signs.html
@@ -212,6 +212,15 @@
 		document.getElementById("1").style.width = "100px";
 	}
     
+// command_signs
+    const command_signs = Number(localStorage.getItem("command_signs")) || 0;
+	
+	if (command_signs > 0)
+	{
+		document.getElementById("2").style.width = "100px";
+	}
+    
 
  </script>
+
 
