--- a/K53_Sign_Test/regulatory_signs.html
+++ b/K53_Sign_Test/regulatory_signs.html
@@ -221,6 +221,16 @@
 	}
     
 
+	 // prohibitions_signs
+    const prohibitions_signs = Number(localStorage.getItem("prohibitions_signs")) || 0;
+	
+	if (prohibitions_signs > 0)
+	{
+		document.getElementById("3").style.width = "100px";
+	}
+    
+
  </script>
+
 
 
