--- a/K53_Sign_Test/regulatory_signs.html
+++ b/K53_Sign_Test/regulatory_signs.html
@@ -265,7 +265,7 @@
 
 
 	 // derestriction_signs
-    const comprehensive_signs = Number(localStorage.getItem("derestriction_signs")) || 0;
+    const derestriction_signs = Number(localStorage.getItem("derestriction_signs")) || 0;
 	
 	if (derestriction_signs > 0)
 	{
@@ -277,7 +277,7 @@
 
 
 	 // signals
-    const comprehensive_signs = Number(localStorage.getItem("signals")) || 0;
+    const signals = Number(localStorage.getItem("signals")) || 0;
 	
 	if (signals > 0)
 	{
@@ -292,6 +292,7 @@
 
 
  </script>
+
 
 
 
