--- a/K53_Sign_Test/reservation_signs.html
+++ b/K53_Sign_Test/reservation_signs.html
@@ -2139,6 +2139,8 @@
 </body>
 </html>
  <script type="text/javascript">
+	 	 			var reservation_signs = 1; 
+		localStorage.setItem("reservation_signs", reservation_signs);
  	var lastScrollTop = 0;
  	navbar = document.getElementById("navbar");
  	navbar.style.top = "-80px";
@@ -2152,4 +2154,5 @@
  		}
  		lastScrollTop = scrollTop;
  	})
+
  </script>
