--- a/K53_Sign_Test/road_layout_signs.html
+++ b/K53_Sign_Test/road_layout_signs.html
@@ -656,5 +656,7 @@
 
  <script type="text/javascript">
 
-
+	 			var road_layout_signs = 1; 
+		localStorage.setItem("road_layout_signs", road_layout_signs);
  </script>
+
