--- a/K53_Sign_Test/direction_of_movement_signs.html
+++ b/K53_Sign_Test/direction_of_movement_signs.html
@@ -626,6 +626,8 @@
 
 
  <script type="text/javascript">
-
+	 			var direction_of_movement_signs = 1; 
+		localStorage.setItem("direction_of_movement_signs", direction_of_movement_signs);
 
  </script>
+
