--- a/K53_Sign_Test/symbolic_signs.html
+++ b/K53_Sign_Test/symbolic_signs.html
@@ -1455,5 +1455,7 @@
 
 
  <script type="text/javascript">
-
+	 			var symbolic_signs = 1; 
+		localStorage.setItem("symbolic_signs", symbolic_signs);
  </script>
+
