--- a/K53_Sign_Test/hazard_marker_signs.html
+++ b/K53_Sign_Test/hazard_marker_signs.html
@@ -544,5 +544,7 @@
 
 
  <script type="text/javascript">
-
+	 	 	 			var hazard_marker = 1; 
+		localStorage.setItem("hazard_marker", hazard_marker);
  </script>
+
