--- a/K53_Sign_Test/information_signs.html
+++ b/K53_Sign_Test/information_signs.html
@@ -466,5 +466,7 @@
 
  <script type="text/javascript">
 
-
+	 	 	 			var information_signs = 1; 
+		localStorage.setItem("information_signs", information_signs);
  </script>
+
