--- a/K53_Sign_Test/warning_signs.html
+++ b/K53_Sign_Test/warning_signs.html
@@ -118,4 +118,59 @@
 
  <script type="text/javascript">
 
+    // road_layout_signs
+    const road_layout_signs = Number(localStorage.getItem("road_layout_signs")) || 0;
+	
+	if (road_layout_signs > 0)
+	{
+		document.getElementById("1").style.width = "100px";
+	}
+
+
+
+	     // direction_of_movement_signs
+    const direction_of_movement_signs = Number(localStorage.getItem("direction_of_movement_signs")) || 0;
+	
+	if (direction_of_movement_signs > 0)
+	{
+		document.getElementById("1").style.width = "100px";
+	}
+
+
+
+
+	     // symbolic_signs
+    const symbolic_signs = Number(localStorage.getItem("symbolic_signs")) || 0;
+	
+	if (symbolic_signs > 0)
+	{
+		document.getElementById("1").style.width = "100px";
+	}
+
+
+
+
+
+
+	     // hazard_marker
+    const hazard_marker = Number(localStorage.getItem("hazard_marker")) || 0;
+	
+	if (hazard_marker > 0)
+	{
+		document.getElementById("1").style.width = "100px";
+	}
+
+
+
+
+	     // information_signs
+    const information_signs = Number(localStorage.getItem("information_signs")) || 0;
+	
+	if (information_signs > 0)
+	{
+		document.getElementById("1").style.width = "100px";
+	}
+	 
+	 
  </script>
+
