--- a/K53_Sign_Test/location_signs.html
+++ b/K53_Sign_Test/location_signs.html
@@ -563,5 +563,7 @@
 
  <script type="text/javascript">
 
-
+			var location_signs = 1; 
+		localStorage.setItem("location_signs", location_signs);
  </script>
+
