--- a/K53_Sign_Test/direction_sign_symbols.html
+++ b/K53_Sign_Test/direction_sign_symbols.html
@@ -761,5 +761,7 @@
 
 
  <script type="text/javascript">
-
+			var direction_sign_symbols = 1; 
+		localStorage.setItem("direction_sign_symbols", direction_sign_symbols);
  </script>
+
