--- a/K53_Sign_Test/route_markers.html
+++ b/K53_Sign_Test/route_markers.html
@@ -278,6 +278,8 @@
 
 
  <script type="text/javascript">
-
+			var route_markers = 1; 
+		localStorage.setItem("route_markers", route_markers);
 
  </script>
+
