--- a/K53_Sign_Test/direction_signs.html
+++ b/K53_Sign_Test/direction_signs.html
@@ -651,7 +651,9 @@
 
 
  <script type="text/javascript">
-
+var direction_signs = 1; 
+		localStorage.setItem("direction_signs", direction_signs);
 
 
  </script>
+
