--- a/K53_Sign_Test/tourism_direction_signs.html
+++ b/K53_Sign_Test/tourism_direction_signs.html
@@ -5166,8 +5166,10 @@
 
 
  <script type="text/javascript">
-
+var tourism_direction_signs = 1; 
+		localStorage.setItem("tourism_direction_signs", tourism_direction_signs);
  </script>
+
 
 
 
