--- a/K53_Sign_Test/local_direction_signs.html
+++ b/K53_Sign_Test/local_direction_signs.html
@@ -1218,8 +1218,10 @@
 
 
  <script type="text/javascript">
-
+var local_direction_signs = 1; 
+		localStorage.setItem("local_direction_signs", local_direction_signs);
  </script>
+
 
 
 
