--- a/K53_Sign_Test/diagrammatic_signs.html
+++ b/K53_Sign_Test/diagrammatic_signs.html
@@ -513,7 +513,8 @@
 
 
  <script type="text/javascript">
- 	var lastScrollTop = 0;
- 	navbar = document.getElementById("navbar");
+var diagrammatic_signs = 1; 
+		localStorage.setItem("diagrammatic_signs", diagrammatic_signs);
 
  </script>
+
