--- a/K53_Sign_Test/guidance_signs.html
+++ b/K53_Sign_Test/guidance_signs.html
@@ -166,5 +166,93 @@
 		document.getElementById("1").style.width = "100px";
 	}
 
+
+
+
+    // direction_sign_symbols
+    const direction_sign_symbols = Number(localStorage.getItem("direction_sign_symbols")) || 0;
+	
+	if (direction_sign_symbols > 0)
+	{
+		document.getElementById("2").style.width = "100px";
+	}
+
+
+
+
+
+    // route_markers
+    const route_markers = Number(localStorage.getItem("route_markers")) || 0;
+	
+	if (route_markers > 0)
+	{
+		document.getElementById("3").style.width = "100px";
+	}
+
+
+
+
+    // direction_signs
+    const direction_signs = Number(localStorage.getItem("direction_signs")) || 0;
+	
+	if (direction_signs > 0)
+	{
+		document.getElementById("4").style.width = "100px";
+	}
+
+
+
+
+
+    // tourism_direction_signs
+    const tourism_direction_signs = Number(localStorage.getItem("tourism_direction_signs")) || 0;
+	
+	if (tourism_direction_signs > 0)
+	{
+		document.getElementById("5").style.width = "100px";
+	}
+
+
+
+
+
+    // local_direction_signs
+    const local_direction_signs = Number(localStorage.getItem("local_direction_signs")) || 0;
+	
+	if (local_direction_signs > 0)
+	{
+		document.getElementById("6").style.width = "100px";
+	}
+
+
+
+
+
+
+
+    // diagrammatic_signs
+    const diagrammatic_signs = Number(localStorage.getItem("diagrammatic_signs")) || 0;
+	
+	if (diagrammatic_signs > 0)
+	{
+		document.getElementById("7").style.width = "100px";
+	}
+
+
+	 
+
+
+
+
+    // variable_message_signs
+    const variable_message_signs = Number(localStorage.getItem("variable_message_signs")) || 0;
+	
+	if (variable_message_signs > 0)
+	{
+		document.getElementById("8").style.width = "100px";
+	}
+	 
+
  </script>
+
 
