--- a/K53_Sign_Test/temporary_signs.html
+++ b/K53_Sign_Test/temporary_signs.html
@@ -1092,6 +1092,8 @@
 
 
  <script type="text/javascript">
-
+			var temporary_signs = 1; 
+		localStorage.setItem("temporary_signs", temporary_signs);
 
  </script>
+
