--- a/K53_Sign_Test/regulatory_road_markings.html
+++ b/K53_Sign_Test/regulatory_road_markings.html
@@ -709,5 +709,7 @@
 
 
  <script type="text/javascript">
-
+			var regulatory_road_markings = 1; 
+		localStorage.setItem("regulatory_road_markings", regulatory_road_markings);
  </script>
+
