--- a/K53_Sign_Test/warning_road_markings.html
+++ b/K53_Sign_Test/warning_road_markings.html
@@ -474,5 +474,7 @@
 
 
  <script type="text/javascript">
-
+			var warning_road_markings = 1; 
+		localStorage.setItem("warning_road_markings", warning_road_markings);
  </script>
+
