--- a/K53_Sign_Test/guidance_road_markings.html
+++ b/K53_Sign_Test/guidance_road_markings.html
@@ -374,6 +374,8 @@
 
 
  <script type="text/javascript">
-
+			var guidance_road_markings = 1; 
+		localStorage.setItem("guidance_road_markings", guidance_road_markings);
 
  </script>
+
