--- a/K53_Sign_Test/exclusive_use_symbols.html
+++ b/K53_Sign_Test/exclusive_use_symbols.html
@@ -453,6 +453,8 @@
 
 
  <script type="text/javascript">
-
+			var exclusive_use_symbols = 1; 
+		localStorage.setItem("exclusive_use_symbols", exclusive_use_symbols);
  </script>
+
 
