--- a/K53_Rules_Test/brakes_tyres.html
+++ b/K53_Rules_Test/brakes_tyres.html
@@ -92,6 +92,8 @@
 </html>
 
  <script type="text/javascript">
-
+			var brakes_tyres = 1; 
+		localStorage.setItem("brakes_tyres", brakes_tyres);
 
  </script>
+
