--- a/K53_Rules_Test/destruction_devices.html
+++ b/K53_Rules_Test/destruction_devices.html
@@ -64,5 +64,7 @@
 </html>
 
  <script type="text/javascript">
-
+			var destruction_devices = 1; 
+		localStorage.setItem("destruction_devices", destruction_devices);
  </script>
+
