--- a/K53_Rules_Test/direction_indicators_road_lanes.html
+++ b/K53_Rules_Test/direction_indicators_road_lanes.html
@@ -129,5 +129,7 @@
 </html>
 
  <script type="text/javascript">
-
+			var direction_indicators_road_lanes = 1; 
+		localStorage.setItem("direction_indicators_road_lanes", direction_indicators_road_lanes);
  </script>
+
