--- a/K53_Rules_Test/fuel_tank_engine.html
+++ b/K53_Rules_Test/fuel_tank_engine.html
@@ -113,6 +113,8 @@
 </html>
 
  <script type="text/javascript">
-
+			var fuel_tank_engine = 1; 
+		localStorage.setItem("fuel_tank_engine", fuel_tank_engine);
 
  </script>
+
