--- a/K53_Rules_Test/general_rules.html
+++ b/K53_Rules_Test/general_rules.html
@@ -159,5 +159,7 @@
 </html>
 
  <script type="text/javascript">
- 	
+ 				var general_rules = 1; 
+		localStorage.setItem("general_rules", general_rules);
  </script>
+
