--- a/K53_Rules_Test/lights_number_plates.html
+++ b/K53_Rules_Test/lights_number_plates.html
@@ -133,6 +133,8 @@
 </html>
 
  <script type="text/javascript">
- 	
+ 	 				var lights_number_plates = 1; 
+		localStorage.setItem("lights_number_plates", lights_number_plates);
 
  </script>
+
