--- a/K53_Rules_Test/noise_on_the_road.html
+++ b/K53_Rules_Test/noise_on_the_road.html
@@ -89,5 +89,7 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var noise_on_the_road = 1; 
+		localStorage.setItem("noise_on_the_road", noise_on_the_road);
  </script>
+
