--- a/K53_Rules_Test/overtaking_lanes_freeways.html
+++ b/K53_Rules_Test/overtaking_lanes_freeways.html
@@ -172,5 +172,7 @@
 </html>
 
  <script type="text/javascript">
-
+ 	 				var overtaking_lanes_freeways = 1; 
+		localStorage.setItem("overtaking_lanes_freeways", overtaking_lanes_freeways);
  </script>
+
